# WaitTimeDisplay

./: .gitignore  CLAUDE.md  README.md  build_sim.bat  clean_all.bat  config_popular.json  lv_conf.h  platformio.ini  release.ps1  run_sim.bat  test.bat
boards/: esp32-c6-devkitc-1.json  partitions_ota_8mb.csv
docs/: ARCHITECTURE.md
sim/: Arduino.h  ArduinoJson.h  CMakeLists.txt  DNSServer.h  ESPmDNS.h  HTTPClient.h  Preferences.h  README.md  SPI.h  WebServer.h  WiFi.h  WiFiClientSecure.h  build.bat  clean.bat  lcd_st7789_sim.cpp  lv_conf.h  lvgl_driver_sim.cpp  main_sim.cpp  otaupdater_sim.cpp  rebuild.bat  run.bat  sim_events.h  tzhelper_sim.cpp  wifimgr_sim.cpp
src/: appstate.cpp  appstate.h  button.cpp  button.h  cfgserver.cpp  cfgserver.h  config.h  configmanager.cpp  configmanager.h  display.cpp  display.h  httpjson.cpp  httpjson.h  idhash.h  lcd_st7789.cpp  lcd_st7789.h  lvgl_driver.cpp  lvgl_driver.h  main.cpp  otaupdater.cpp  otaupdater.h  queueapi.cpp  queueapi.h  quiethours.h  ridefilter.cpp  ridefilter.h  ridereindex.h  statusled.cpp  statusled.h  trendstore.cpp  trendstore.h  tzhelper.cpp  tzhelper.h  tzposix.h  versioncompare.h  waitdefaults.h  waitlevel.h  wifimgr.cpp  wifimgr.h
tests/: CMakeLists.txt  DNSServer.h  HTTPClient.h  Preferences.h  README.md  WebServer.h  WiFi.h  WiFiClientSecure.h  build_tests.bat  clean_tests.bat  run_live_tests.bat  run_tests.bat  test_appstate_logic.cpp  test_button.cpp  test_cfgserver.cpp  test_configmanager.cpp  test_idhash.cpp  test_live_api.cpp  test_otaupdater_json.cpp  test_queueapi_json.cpp  test_quiethours.cpp  test_ridefilter.cpp  test_trendstore.cpp  test_tzhelper.cpp  test_versioncompare.cpp  test_waitlevel.cpp  tzhelper_msvc_shims.h
tests/live/: HTTPClient.h  WiFi.h  WiFiClientSecure.h
